samples/kubernetes-to-kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.service.expose: "true"
  creationTimestamp: null
  labels:
    io.move2kube.service: api
  name: api
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 1234
  selector:
    io.move2kube.service: api
  type: ClusterIP
status:
  loadBalancer: {}
