samples/kubernetes-to-kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.service.expose: "true"
  creationTimestamp: null
  labels:
    io.move2kube.service: redis
  name: redis
spec:
  clusterIP: None
  ports:
    - name: headless
      port: 55555
      targetPort: 0
  selector:
    io.move2kube.service: redis
  type: ClusterIP
status:
  loadBalancer: {}
