samples/kubernetes-to-kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.move2kube.service: api
  name: api
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: api
              servicePort: 80
            path: /
status:
  loadBalancer: {}
