samples/kubernetes-to-kubernetes/redis-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.move2kube.service: redis
  name: redis
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: redis
              servicePort: 80
            path: /
status:
  loadBalancer: {}
