samples/kubernetes-to-kubernetes/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.move2kube.service: web
  name: web
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
            path: /
status:
  loadBalancer: {}
